Added a new top section.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
     <div id="outermost">
+        <div class="outerdiv">
+            <span>S P L I</span> <br>
+            <span>T T E R</span>
+        </div>
         <div id="main">
             <div class="right">
                    <span style="color: hsl(186, 14%, 43%);">Bill</span><br>   
