Added Hovering Effect

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div id="group2">
                             <button class="bt1">25%</button>
                             <button class="bt1">50%</button>
-                            <button class="bt1" style="background-color: hsl(186, 14%, 43%);;">Custom</button> 
+                            <button class="bt1, custm">Custom</button> 
                        </div>
                     </div>
                     <div class="div1">
